--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="r-logo">
                       <a href="index.html" class="d-inline-block">
-                    <h1 class="mb-3"><b class="" style="    color: white;">RAF</b> <span></span></h1>
+                <img src="logo.png" class="img-fluid d-block m-auto" alt="">
 
 					  </a>
                      </div>
@@ -121,6 +121,7 @@
                 <div class="container">
                   <div class="r-slider-top-content float-right text-right">
                     <h4 class="text-gray-white mb-3">RAF<strong></strong></h4>
+					
                     <h1 class="mb-3"><b class="text-gray-white">Seguridad</b> <span></span></h1>
 				<P style="    color: white;">Brindamos un servicio integro para que el comprador y <br>vendedor puedan operar con seguridad y tranquilidad.</P>
                     <a href="#" class="btn btn-outlined"> Reservar Cita </a>
